adding k8s